--- a/style.css
+++ b/style.css
@@ -1,18 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 body {
-    font-family: "Montserrat", sans-serif;
+    position: relative;
+    display: block;
+    margin: auto;
+    cursor: zoom-in;
+    background-color: hsl(0, 0%, 100%);
+    transition: background-color 300ms;
 }
 
-header h1 {
-    color: white;
-    font-size: 40px;
-    text-align: center;
-    padding: 25px;
-    margin-top: -10px;
-}
+
 header {
-    background-color: #ABBB7C;
-    margin: 0px -6px 0px -6px;
+    background: linear-gradient(89.41deg, #ABBB7C 0%, #4D5538 100%);
+    position: absolute;
+    width: 2690px;
+    height: 220px;
+    left: 0px;
+    top: 0px;
+
+}
+
+h1 {
+    left: 615px;
+    top: 39px;
+    padding-left: 5px;
+    text-align: center;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 96px;
+    color: #FFFFFF;
 }
 
 h3 {
