--- a/style.css
+++ b/style.css
@@ -7,27 +7,27 @@ body {
     transition: background-color 300ms;
 }
 
-
+header h1 {
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    padding: 25px;
+    margin-top: -10px;
+}
 header {
+    margin: 0px -6px 0px -6px;
     background: linear-gradient(89.41deg, #ABBB7C 0%, #4D5538 100%);
     position: absolute;
     width: 2690px;
     height: 220px;
     left: 0px;
     top: 0px;
-
+}
+.circles {
+    width: 100%;
+    height: 100%;
 }
 
-h1 {
-    left: 615px;
-    top: 39px;
-    padding-left: 5px;
-    text-align: center;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-size: 96px;
-    color: #FFFFFF;
-}
 
 h3 {
     background: #9DB84E;
