--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     transition: background-color 300ms;
 }
 
-header h1 {
+h1 {
     color: white;
     font-size: 40px;
     text-align: center;
