--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h3 {
     visibility: hidden;
     opacity: 0;
     transition: 0.3s ease-in-out;
-    padding-left: 150px;
+    padding-right: 105px;
     width: 480px;
     height: 400px;
     background-color: #dad1bb;
