--- a/style.css
+++ b/style.css
@@ -92,8 +92,9 @@ h3 {
     visibility: hidden;
     opacity: 0;
     transition: 0.3s ease-in-out;
-    width: 400px;
-    height: 397px;
+    width: 480px
+    right: 114px;
+    height: 400px;
     background-color: #dad1bb;
 }
 .container .card:hover .content  {
